apps/grafana/resources/argocd-metrics.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: argocd-metrics
  namespace: argocd
  labels:
    app.kubernetes.io/component: metrics
    app.kubernetes.io/part-of: argocd
spec:
  ports:
    - name: metrics
      port: 8082
      targetPort: 8082
  selector:
    app.kubernetes.io/name: argocd-application-controller
---
apiVersion: v1
kind: Service
metadata:
  name: argocd-server-metrics
  namespace: argocd
  labels:
    app.kubernetes.io/component: server-metrics
    app.kubernetes.io/part-of: argocd
spec:
  ports:
    - name: metrics
      port: 8083
      targetPort: 8083
  selector:
    app.kubernetes.io/name: argocd-server
---
apiVersion: v1
kind: Service
metadata:
  name: argocd-repo-server-metrics
  namespace: argocd
  labels:
    app.kubernetes.io/component: repo-metrics
    app.kubernetes.io/part-of: argocd
spec:
  ports:
    - name: metrics
      port: 8084
      targetPort: 8084
  selector:
    app.kubernetes.io/name: argocd-repo-server
